Added generic tag support for multiple museums and updated affected APIs, added get User profile endpoint, updated swagger docs, minor bug fixes.
